Fix annoying click gap between twisty and label

--- a/content/zipdown.css
+++ b/content/zipdown.css
@@ -9,7 +9,8 @@ richlistitem[type="download"][state="1"] .twisty {
   width: 10px;
   -moz-image-region: rect(0px, 12px, 12px, 0);
   margin-top: -4px;
-  margin-right: -2px;
+  margin-right: -4px;
+  padding-right: 2px;
 }
 
 richlistbox:focus richlistitem[type="download"][state="1"][selected="true"] .twisty {
